fixed donation button and search bar alignment at minimum desktop width

--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -677,7 +677,9 @@ input[type=submit] {
       width: 14rem;
       height: 2.25rem;
       overflow: hidden;
-      margin-top: 0.75rem; } }
+      -ms-flex-item-align: center;
+          -ms-grid-row-align: center;
+          align-self: center; } }
 
 #nav-search-button {
   font-size: 1rem; }
